gnuit (4.9.4-1) unstable; urgency=low

  * New upstream version.
  * Fix typo in long description (Closes: #479175).
  * Update debian/copyright to match updated gnulib.
  * Add Vcs- headers.

 -- Ian Beckwith <ianb@erislabs.net>  Sun, 18 May 2008 18:43:47 +0100

gnuit (4.9.3-1) unstable; urgency=low

  * New upstream version.
  * Updated license info in debian/copyright.

 -- Ian Beckwith <ianb@erislabs.net>  Fri, 15 Feb 2008 21:41:15 +0000

gnuit (4.9.2-1) unstable; urgency=low

  * New upstream version.
  * Package name changed to gnuit.
  * Added transitional git package.
  * Set DM-Upload-Allowed: yes.
  * Updated debian/copyright, gnuit is now GPL-3+, with info docs under
    GFDL-1.2+, with no Invariant Sections, no Front-Cover Texts and 
    no Back-Cover Texts.
  * Removed unneeded postinst and prerm.
  * preinst: when removing alternatives, check for presence of git
    alternative instead of going by version number.
  * Updated NEWS.Debian with user-visible changes.
  * No longer install obsolete subdir ChangeLogs.
  * Update maintainer email address.
  * Standards-Version: 3.7.3 (no changes).
  * Bump debhelper compat level to 6.
  * Tweak long description.

 -- Ian Beckwith <ianb@erislabs.net>  Thu, 10 Jan 2008 22:04:26 +0000

git (4.3.20-12) unstable; urgency=low

  * Use debhelper to handle install-info calls.
  * Bump debhelper version to 5.
  * Stop ignoring make distclean return code.
  * git.texinfo: add @dircategory Utilities.

 -- Ian Beckwith <ianb@nessie.mcc.ac.uk>  Mon, 06 Aug 2007 20:00:43 +0100

git (4.3.20-11) unstable; urgency=low

  * Finish /usr/bin/git transition (Closes: #379982, #405641):
    + No longer provide /usr/bin/git, use gitfm instead.
    + preinst: remove alternatives if upgrading from version before 4.3.20-11.
    + prerm, postinst: drop alternatives manipulation.
    + Add explanation to NEWS.Debian.
  * Thanks to Bruce Sass for the following patches:
    + Add ^C^D commands to manipulate .deb files (Closes: #396797).