@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Ian Beckwith <ianb@erislabs.net>
 Uploaders: MJ Ray (Debian) <mjr@debian.org>
 Build-Depends: libncurses-dev, libreadline5-dev, texinfo, debhelper (>= 6), autotools-dev
-Standards-Version: 3.7.3
+Standards-Version: 3.8.0
 XS-DM-Upload-Allowed: yes
 Vcs-Browser: http://git.savannah.gnu.org/gitweb/?p=gnuit.git
 Vcs-Git: git://git.savannah.gnu.org/gnuit.git
