@@ -84,7 +84,11 @@ install: build
 	$(MAKE) install DESTDIR="$(BUILDDIR)"
 
 	# remove man symlinks - dh_link will recreate properly
-	rm -f $(BUILDDIR)/usr/share/man/man1/git{which,mkdirs,{x,re,rf}grep}.1
+	rm -f $(BUILDDIR)/usr/share/man/man1/gitwhich.1
+	rm -f $(BUILDDIR)/usr/share/man/man1/gitmkdirs.1
+	rm -f $(BUILDDIR)/usr/share/man/man1/gitxgrep.1
+	rm -f $(BUILDDIR)/usr/share/man/man1/gitregrep.1
+	rm -f $(BUILDDIR)/usr/share/man/man1/gitrfgrep.1
 	touch build-stamp
 
 
