@@ -1,0 +1,2 @@
+version=3
+ftp://ftp.gnu.org/gnu/gnuit/gnuit-(.*)\.tar\.gz
